--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -1,11 +1,11 @@
-<div class='container'>
-  <div class='row'>
-    <div class='col-10'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
       <h2><%= @member.full_name %>さんの投稿</h2>
-      <table class='table'>
+      <table class='table table-bordered'>
         <tbody>
           <tr>
-            <th>タイトル</th>
+            <th class='col-2'>タイトル</th>
             <td><%= @post.title %></td>
           </tr>
 
