--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -1,12 +1,12 @@
-<div class='container main-top'>
-  <div class='row'>
-    <div class='col-10'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
       <h2>タグ一覧</h2>
       <table class='table table-striped'>
         <thead class='thead-dark'>
           <tr>
-            <th>タグ</th>
-            <th>削除</th>
+            <th>タグ名</th>
+            <th>編集</th>
           </tr>
         </thead>
         <tbody>
