--- a/app/views/user/members/likes.html.erb
+++ b/app/views/user/members/likes.html.erb
@@ -1,8 +1,8 @@
-<div class='container  main-top'>
-  <div class='row'>
-    <div class='col-10'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
       <h2>いいねした投稿</h2>
-      <table class='table'>
+      <table class='table table-striped'>
         <thead>
           <tr>
             <th class='col-3'>ニックネーム</th>
