--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -1,12 +1,16 @@
-<div class='container main-top'>
-  <div class='row'>
-    <div class='col-10'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
       <h2><%= @member.full_name %>さんの詳細</h2>
-      <table class='table table-striped'>
+      <table class='table table-striped table-bordered'>
         <tbody>
           <tr>
-            <th>会員名</th>
-            <td><%= @member.full_name %></td>
+            <th>プロフィール画像</th>
+            <td><%= image_tag @member.get_profile_image(100,100),class: 'image' %></td>
+          </tr>
+          <tr>
+            <th class='col-4'>お名前</th>
+            <td class='col-8'><%= @member.full_name %></td>
           </tr>
 
           <tr>
@@ -37,7 +41,7 @@
         </tbody>
       </table>
 
-      <table class='table mt-5'>
+      <table class='table table-striped table-bordered mt-5'>
         <thead class='thead-dark'>
           <tr>
             <th>タイトル</th>
