--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -26,6 +26,11 @@
               <%= link_to '投稿一覧', posts_path, class: 'nav-link active' %>
             </li>
             <% if current_member.guest? %>
+
+              <li class='nav-item mx-2'>
+                <%= link_to '新規投稿', new_post_path, class: 'nav-link active' %>
+              </li>
+
               <li class='nav-item mx-2'>
                 <%= link_to "下書き一覧", confirm_posts_path, class: 'nav-link active' %>
               </li>
