--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 <% if obj.errors.any? %>
   <% obj.errors.full_messages.each do |message| %>
-    <div><%= message %></div>
+    <div class='error_messages'><%= "⚠️"+ message %></div>
   <% end %>
 <% end %>
