--- a/app/views/user/members/_index.html.erb
+++ b/app/views/user/members/_index.html.erb
@@ -1,9 +1,8 @@
 <% members.each do |member| %>
   <tr>
     <% if member.guest? %>
-      <td><%= link_to member.nickname,member_path(member.id) %></td>
-      <td><%= "#{member.full_name}さん" %></td>
-      <td><%= "#{member.likes.count}件" %></td>
+      <td><%= link_to "#{member.nickname}(#{member.full_name}さん)",member_path(member.id) %></td>
+      <td><%= "#{member.posts.count}件" %></td>
       <td><%= "#{member.followings.count}人" %></td>
       <td><%= "#{member.followers.count}人" %></td>
     <% end %>
