--- a/app/views/user/members/index.html.erb
+++ b/app/views/user/members/index.html.erb
@@ -1,18 +1,17 @@
-<div class='main-top'>
-  <div class='row'>
-    <div class='col-2'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col-2 pt-5'>
       <%= render 'user/posts/tag_lists', tag_lists: Tag.all %>
     </div>
-    <div class='col-10'>
-      <table class='table'>
+    <div class='col-9 offset-1'>
+      <h2>参加者の一覧</h2>
+      <table class='table table-striped'>
         <thead>
-          <h2>参加者の一覧</h2>
           <tr>
-            <th class='col-4'>ニックネーム</th>
-            <th class='col-4'>フルネーム</th>
-            <th class='col-2'>いいね総数</th>
-            <th class='col-1'>フォロー</th>
-            <th class='col-1'>フォロワー</th>
+            <th class='col-6'>ニックネーム(フルネーム)</th>
+            <th class='col-2'>投稿した件数</th>
+            <th class='col-2'>フォロー</th>
+            <th class='col-2'>フォロワー</th>
           </tr>
         </thead>
         <tbody>
