--- a/app/views/user/posts/new.html.erb
+++ b/app/views/user/posts/new.html.erb
@@ -1,9 +1,11 @@
-<%= render 'shared/errors', obj: @post %>
-<div class='container main-top'>
-  <div class='row'>
-    <div class='col-10'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
       <h2>新規投稿</h2>
-      <%= form_with model: @post,url: posts_path do |f| %>
+      <%= form_with model: @post,url: posts_path,local: false do |f| %>
+        <div id='errors' class='my-3 text-right'>
+          <%= render 'shared/errors', obj: f.object %>
+        </div>
 
         <div class='form-group'>
           <%= f.label :title, 'タイトル' %>&emsp;<span class="badge badge-danger">必須</span>
@@ -21,6 +23,7 @@
         </div>
 
         <div class='form-group'>
+          <%= f.label :status, '投稿方法を選択' %><br />
           <%= f.select :status, Post.statuses.keys.map{ |k| [t("enums.post.status.#{k}"),k]},{},{class: "custom-select"} %>
         </div>
 
