--- a/app/views/user/posts/sort.html.erb
+++ b/app/views/user/posts/sort.html.erb
@@ -1,22 +1,24 @@
-<div class='container main-top'>
-  <div class='row'>
-    <div class='col-11'>
-      <h2>並び替え結果</h2>
-      <%= render 'user/posts/post_search' %>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
+      <div class='row'>
+        <h2 class='col-5'>並び替え結果</h2>
+        <div class='text-right col-7'>
+          <%= render 'user/posts/post_search' %>
+        </div>
+      </div>
       <table class='table'>
         <thead>
           <tr>
-            <th>投稿者</th>
-            <th>タイトル</th>
-            <th>投稿日</th>
-            <th>タグ</th>
-            <th>いいね数</th>
+            <th class='col-3'>投稿者</th>
+            <th class='col-3'>タイトル</th>
+            <th class='col-2'>投稿日</th>
+            <th class='col-2'>タグ</th>
+            <th class='col-2'>いいね数</th>
           </tr>
         </thead>
         <tbody>
-          <div class='sort'>
-            <%= render 'user/posts/sort', posts: @posts %>
-          </div>
+          <%= render 'user/posts/sort', posts: @posts %>
         </tbody>
       </table>
     </div>
