--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -1,53 +1,67 @@
-<div class='container main-top'>
-  <div class='row'>
-    <div class='col-10'>
+<div class='container margin'>
+  <div class='row circle'>
+    <div class='col'>
       <h2>新規登録</h2>
-
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= render "user/shared/error_messages", resource: resource %>
-
-        <div class="field">
-          <%= f.label '名前' %>&emsp;<span class="badge badge-danger">必須</span>
-          <%= f.text_field :last_name, placeholder: "性", autofocus: true %>
-          <%= f.text_field :first_name, placeholder: "名" %>
+        <div id='errors' class='my-3 text-right'>
+          <%= render 'shared/errors', obj: resource %>
         </div>
+        <table class='table'>
+          <tbody>
+            <tr>
+              <th class='col-4'><%= f.label '名前' %>&emsp;<span class="badge badge-danger">必須</span></th>
+              <td>
+                <div class='row'>
+                  <div class='col'>
+                    <%= f.text_field :last_name, placeholder: "性", autofocus: true,class: 'form-control' %>
+                  </div>
+                  <div class='col'>
+                    <%= f.text_field :first_name, placeholder: "名",class: 'form-control' %>
+                  </div>
+                </div>
+              </td>
+            </tr>
 
-        <div class="field">
-          <%= f.label :nickname, 'ニックネーム' %>&emsp;<span class="badge badge-danger">必須</span>
-          <%= f.text_field :nickname, placeholder: "ぴょん太" %>
-        </div>
+            <tr>
+              <th><%= f.label :nickname, 'ニックネーム' %>&emsp;<span class="badge badge-danger">必須</span></th>
+              <td><%= f.text_field :nickname, placeholder: "ぴょん太",class: 'form-control' %></td>
+            </tr>
 
-        <div class="field">
-          <%= f.label :introduction, '自己紹介' %>
-          <%= f.text_field :introduction %>
-        </div>
+            <tr>
+              <th><%= f.label :introduction, '自己紹介' %></th>
+              <td><%= f.text_field :introduction,class: 'form-control'  %></td>
+            </tr>
 
-        <div class="field">
-          <%= f.label :email, 'メールアドレス' %>&emsp;<span class="badge badge-danger">必須</span>
-          <%= f.email_field :email, autofocus: true,placeholder: "12345678", autocomplete: "email" %>
-        </div>
+            <tr>
+              <th><%= f.label :email, 'メールアドレス' %>&emsp;<span class="badge badge-danger">必須</span></th>
+              <td><%= f.email_field :email, autofocus: true,placeholder: "12345678", autocomplete: "email",class: 'form-control'  %></td>
+            </tr>
 
-        <div class="field">
-          <%= f.label :password, 'パスワード（6文字以上）' %>&emsp;<span class="badge badge-danger">必須</span>
-          <%= f.password_field :password,placeholder: "12345678", autocomplete: "new-password" %>
-        </div>
+            <tr>
+              <th><%= f.label :password, 'パスワード（6文字以上）' %>&emsp;<span class="badge badge-danger">必須</span></th>
+              <td><%= f.password_field :password,placeholder: "12345678", autocomplete: "new-password",class: 'form-control'  %></td>
+            </tr>
 
-        <div class="field">
-          <%= f.label :password_confirmation, 'パスワード再確認（6文字以上）' %>&emsp;<span class="badge badge-danger">必須</span>
-          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-        </div>
+            <tr>
+              <th><%= f.label :password_confirmation, 'パスワード再確認（6文字以上）' %>&emsp;<span class="badge badge-danger">必須</span></th>
+              <td><%= f.password_field :password_confirmation, autocomplete: "new-password",class: 'form-control'  %></td>
+            </tr>
 
-        <div class="field">
-          <%= f.label :start_date, '勉強を始めた日' %>&emsp;<span class="badge badge-danger">必須</span>
-          <%= f.date_field :start_date %>
-        </div>
+            <tr>
+              <th><%= f.label :start_date, '勉強を始めた日' %>&emsp;<span class="badge badge-danger">必須</span></th>
+              <td><%= f.date_field :start_date,class: 'form-control' %></td>
+            </tr>
 
-        <div class="actions">
-          <%= f.submit "新規登録",class: 'btn btn-success' %>
-        </div>
+            <tr>
+              <th></th>
+              <td class='text-right'><%= f.submit "新規登録",class: 'btn btn-success' %></td>
+            </tr>
+          </tbody>
+        </table>
       <% end %>
-
-      <%= render "user/shared/links" %>
+      <div class='text-right'>
+        <%= render "user/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
