--- a/app/views/user/relationships/_follow_btn.html.erb
+++ b/app/views/user/relationships/_follow_btn.html.erb
@@ -1,7 +1,7 @@
 <% if current_member != member %>
   <% if current_member.following?(member) %>
-    <%= link_to "フォロー外す", member_relationships_path(member.id), method: :delete %>
+    <%= link_to "フォロー外す", member_relationships_path(member.id), method: :delete, remote: true %>
   <% else %>
-    <%= link_to "フォローする", member_relationships_path(member.id), method: :post %>
+    <%= link_to "フォローする", member_relationships_path(member.id), method: :post, remote: true %>
   <% end %>
 <% end %>
