--- a/app/views/user/members/show.html.erb
+++ b/app/views/user/members/show.html.erb
@@ -78,8 +78,8 @@
             <tr>
               <th class='col-2'>ニックネーム</th>
               <th class='col-6'>タイトル</th>
-              <th class='col-4'>内容</th>
-              <th></th>
+              <th class='col-3'>内容</th>
+              <th class='col-1'></th>
             </tr>
           </thead>
           <tbody>
