--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,8 +4,21 @@
   color: red;
 }
 
+a {
+  color: #000;
+
+}
+
+.fa-thumbs-up {
+  color: pink;
+}
+
 header {
   background-color: #d4d4d4;
+}
+
+i {
+  color: #fff;
 }
 
 .margin-root {
