--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,70 +10,98 @@
         <ul class="navbar-nav ml-auto">
           <% if member_signed_in? %>
 
+            <%= link_to about_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-graduation-cap"></i>&nbsp; About
+              <% end %>
+
             <li class='nav-item mx-2'>
-              <%= link_to 'About', about_path, class: 'nav-link active' %>
+              <%= link_to  member_path(current_member.id), class: 'nav-link active' do %>
+                <i class="fa-solid fa-user"></i>&nbsp; マイページ
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'マイページ', member_path(current_member.id), class: 'nav-link active' %>
+              <%= link_to members_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-users"></i>&nbsp; 投稿者一覧
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to '投稿者一覧', members_path, class: 'nav-link active' %>
-            </li>
-
-            <li class='nav-item mx-2'>
-              <%= link_to '投稿一覧', posts_path, class: 'nav-link active' %>
+              <%= link_to  posts_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-file-lines"></i>&nbsp; 投稿一覧
+              <% end %>
             </li>
             <% if current_member.guest? %>
 
               <li class='nav-item mx-2'>
-                <%= link_to '新規投稿', new_post_path, class: 'nav-link active' %>
+                <%= link_to new_post_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-file-circle-plus"></i>&nbsp; 新規投稿
+                <% end %>
               </li>
 
               <li class='nav-item mx-2'>
-                <%= link_to "下書き一覧", confirm_posts_path, class: 'nav-link active' %>
+                <%= link_to confirm_posts_path, class: 'nav-link active' do %>
+                  <i class="fa-solid fa-comment-dots"></i>&nbsp; 下書き一覧
+                <% end %>
               </li>
             <% end %>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'ログアウト', destroy_member_session_path, method: :delete, class: 'nav-link active' %>
+              <%= link_to destroy_member_session_path, method: :delete, class: 'nav-link active' do %>
+                <i class="fa-solid fa-right-from-bracket"></i>&nbsp; ログアウト
+              <% end %>
             </li>
 
           <% elsif admin_signed_in? %>
 
             <li class='nav-item mx-2'>
-              <%= link_to '会員一覧', admin_members_path, class: 'nav-link active' %>
+              <%= link_to admin_members_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-users"></i>&nbsp; 会員一覧
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to '投稿一覧', admin_posts_path, class: 'nav-link active' %>
+              <%= link_to admin_posts_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-file-lines"></i>&nbsp; 投稿一覧
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'タグ一覧', admin_tags_path, class: 'nav-link active' %>
+              <%= link_to admin_tags_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-tags"></i>&nbsp; タグ一覧
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'ログアウト', destroy_admin_session_path, method: :delete, class: 'nav-link active' %>
+              <%= link_to destroy_admin_session_path, method: :delete, class: 'nav-link active' do %>
+                <i class="fa-solid fa-right-from-bracket"></i>&nbsp; ログアウト
+              <% end %>
             </li>
 
           <% else %>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'ゲストログイン', guest_sign_in_path, method: :post, class: 'nav-link active' %>
+              <%= link_to guest_sign_in_path, method: :post, class: 'nav-link active' do %>
+                <i class="fa-solid fa-user"></i>&nbsp; ゲストログイン（閲覧用）
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'About', about_path, class: 'nav-link active' %>
+              <%= link_to about_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-graduation-cap"></i>&nbsp; About
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to '新規登録', new_member_registration_path, class: 'nav-link active' %>
+              <%= link_to  new_member_registration_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-user-plus"></i>&nbsp; 新規登録
+              <% end %>
             </li>
 
             <li class='nav-item mx-2'>
-              <%= link_to 'ログイン', new_member_session_path, class: 'nav-link active' %>
+              <%= link_to new_member_session_path, class: 'nav-link active' do %>
+                <i class="fa-solid fa-right-to-bracket"></i>&nbsp; ログイン
+              <% end %>
             </li>
 
           <% end %>
