--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <script src="https://kit.fontawesome.com/0e753d0079.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -16,7 +16,7 @@
     </header>
 
     <main class='main'>
-      <p class="notice"><%= notice %></p>
+      <h4 class="notice ml-5 text-success"><%= notice %></h4>
       <%= render '/user/searches/form' %>
       <%= yield %>
     </main>
