--- a/app/views/user/likes/_like.html.erb
+++ b/app/views/user/likes/_like.html.erb
@@ -1,13 +1,13 @@
-<% if current_member.id != post.member_id && current_member.guest? %>
+<% if admin_signed_in? || current_member.guest_member %>
+ <i class="fa-solid fa-thumbs-up"></i>&nbsp;<%= post.likes.count %>
+<% else %>
   <% if post.liked_by?(current_member) %>
       <%= link_to post_likes_path(post.id), method: :delete,remote: true do %>
-        ♥<%= post.likes.count %>
+        <i class="fa-solid fa-thumbs-up"></i>&nbsp;<%= post.likes.count %>
       <% end %>
   <% else %>
       <%= link_to post_likes_path(post.id), method: :post, remote: true do %>
-        ♡<%= post.likes.count %>
+        <i class="fa-solid fa-thumbs-up"></i>&nbsp;<%= post.likes.count %>
       <% end %>
   <% end %>
-<% else %>
-  ♥<%= post.likes.count %>
 <% end %>
