--- a/app/views/user/searches/_form.html.erb
+++ b/app/views/user/searches/_form.html.erb
@@ -1,6 +1,6 @@
-<div class='text-right'>
+<div class='text-right mr-5'>
   <% if member_signed_in? || admin_signed_in? %>
-    <%= form_with url: search_path, method: :get, local: true do |f| %>
+    <%= form_with url: search_path, method: :get do |f| %>
       <%= f.text_field :content,placeholder: '検索したい内容' %>
       <%= f.select :model, options_for_select({ "投稿を探す" => "post", "ニックネームで探す" => "member" }) %>
       <%= f.select :method, options_for_select({ "部分一致" => "partial", "完全一致" => "perfect" }) %>
