--- a/app/views/user/registrations/new.html.erb
+++ b/app/views/user/registrations/new.html.erb
@@ -9,6 +9,10 @@
         <table class='table'>
           <tbody>
             <tr>
+              <th><%= f.label :profile_image, 'プロフィール画像' %></th>
+              <td><%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %></td>
+            </tr>
+            <tr>
               <th class='col-4'><%= f.label '名前' %>&emsp;<span class="badge badge-danger">必須</span></th>
               <td>
                 <div class='row'>
