--- a/app/views/user/homes/about.html.erb
+++ b/app/views/user/homes/about.html.erb
@@ -1,4 +1,4 @@
-<div class='text-center margin'>
+<div class='text-center padding background home'>
   <h1>本サイトの目的</h1>
   <p class='mt-5'>
     このサイトは未来のエンジニア業界の不足を挫折率減少の面で、<br />
