--- a/app/views/user/homes/top.html.erb
+++ b/app/views/user/homes/top.html.erb
@@ -1,5 +1,5 @@
-<div class='text-center margin-root'>
-    <h1>ようこそプログラミング勉強専用サイトへ！！</h1>
+<div class='text-center padding background home'>
+  <h1>ようこそプログラミング勉強専用サイトへ！！</h1>
   <div class='my-5'>
     お互いに切磋琢磨しレベルの高いエンジニアを目指してみんなで知識理解を深めましょう
   </div>
