--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,11 @@
       <%= render '/layouts/header' %>
     </header>
 
-    <main class='main'>
-      <h4 class="notice ml-5 text-success"><%= notice %></h4>
-      <%= render '/user/searches/form' %>
+    <main>
+      <div class="notice pl-5 "><%= notice %></div>
+      <% unless %w[root about].any? { |name| current_page?(send("#{name}_path")) } %>
+        <%= render '/user/searches/form' %>
+      <% end %>
       <%= yield %>
     </main>
     <footer class="footer">
