--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -23,7 +23,7 @@ header {
 }
 
 .background {
-  background-image: url('/computer-g317870da3_1920.png');
+  background-image: url('../images/computer-g317870da3_1920.png');
   height: 700px;
   width: auto;
   background-size: cover;
