--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -5,7 +5,9 @@ header {
 }
 
 .nav-link:hover {
-  background-color: gold;
+  background-color: #a9a9a9;
+  transform: scale(1.3, 1.3);
+  border-radius: 20px;
 }
 
 .error_messages {
