--- a/app/views/user/members/show.html.erb
+++ b/app/views/user/members/show.html.erb
@@ -6,17 +6,19 @@
     <div class='col-9 offset-1'>
       <table class='table table-striped'>
         <tbody>
+          <div class='profile'>
+            <% if current_member.id == @member.id %>
+              <h2><%= image_tag current_member.get_profile_image(100,100),class: 'image mr-5' %>マイページ</h2>
+            <% else %>
+              <h2><%= image_tag @member.get_profile_image(100,100),class: 'image mr-5 ' %><%= @member.nickname %>さんのページ</h2>
+            <% end %>
+            <div class='level'>Lv.<%= @member.level %></div>
+            <div>次のレベルまで<%= @member.level*50 - @member.exp_sum %></div>
+          </div>
 
-          <% if current_member.id == @member.id %>
-            <h2><%= image_tag current_member.get_profile_image(100,100),class: 'image mr-5' %>マイページ</h2>
-          <% else %>
-            <h2><%= image_tag @member.get_profile_image(100,100),class: 'image mr-5 ' %><%= @member.nickname %>さんのページ</h2>
-          <% end %>
-
-          <tr>
-            <th>レベル</th>
-            <td><%= @member.level %></td>
-          </tr>
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style=<%= "width:" + number_to_percentage(@exp_sum_percent.to_s); %> aria-valuenow=<%= number_to_percentage(@exp_sum_percent.to_s) %> aria-valuemin="0" aria-valuemax="100"><%= number_to_percentage(@exp_sum_percent).to_f.ceil(2) %>%</div>
+          </div>
 
           <tr>
             <th>名前</th>
@@ -29,6 +31,10 @@
           <tr>
             <th>自己紹介</th>
             <td><%= @member.introduction %></td>
+          </tr>
+          <tr>
+            <th>投稿数</th>
+            <td><%= @member.posts.count %>件</td>
           </tr>
           <tr>
             <th>勉強を始めた日</th>
