--- a/app/views/user/members/index.html.erb
+++ b/app/views/user/members/index.html.erb
@@ -18,6 +18,7 @@
           <%= render 'user/members/index', members: @members %>
         </tbody>
       </table>
+      <div><%= paginate @members %></div>
     </div>
   </div>
 </div>
