--- a/app/views/user/posts/_sort.html.erb
+++ b/app/views/user/posts/_sort.html.erb
@@ -1,4 +1,4 @@
-<% @posts.each do |post| %>
+<% posts.each do |post| %>
   <tr>
     <td><%= link_to post.member.nickname, member_path(post.member.id) %></td>
 
