--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,7 +1,30 @@
 @import '~bootstrap/scss/bootstrap';
 
+.logo {
+  font-size: 30px;
+}
+
+.logo:hover {
+  animation: rotateY-anim 2s linear infinite;
+}
+
+@keyframes rotateY-anim {
+	0% {
+		transform: rotateY(0deg);
+	}
+
+	100% {
+		transform: rotateY(360deg);
+	}
+}
+
 header {
   background-color: #d4d4d4;
+  font-family: Courgette;
+}
+
+.nav-link {
+  font-size: 20px;
 }
 
 .nav-link:hover {
@@ -95,9 +118,14 @@ li {
   margin-bottom: 100px;
 }
 
+.pagination {
+  justify-content: center;
+}
+
 footer {
   height: 70px;
   background-color: #d4d4d4;
+  font-family: Courgette;
 }
 
 .footer-p {
