--- a/app/views/admin/members/index.html.erb
+++ b/app/views/admin/members/index.html.erb
@@ -6,7 +6,8 @@
         <thead class='thead-dark'>
           <tr>
             <th class='col-3'>お名前</th>
-            <th class='col-5'>メールアドレス</th>
+            <th class='col-1'>レベル</th>
+            <th class='col-4'>メールアドレス</th>
             <th class='col-2'>登録日</th>
             <th class='col-2'>ステータス</th>
           </tr>
@@ -16,6 +17,7 @@
             <% if member.guest? %>
               <tr>
                 <td><%= link_to member.full_name, admin_member_path(member.id) %></td>
+                <td>レベル<%= member.level %></td>
                 <td><%= member.email %></td>
                 <td><%= l member.created_at, format: :short %></td>
                 <td>
