--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="d-flex flex-column">
   <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container">
-      <%= link_to 'ホーム画面', root_path, class: 'navbar-brand p-3' %>
+      <%= link_to 'Home', root_path, class: 'navbar-brand p-3 logo' %>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
                     aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
