--- a/app/views/user/members/_index.html.erb
+++ b/app/views/user/members/_index.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <% if member.guest? %>
       <td><%= link_to "#{member.nickname}(#{member.full_name}さん)",member_path(member.id) %></td>
-      <td><%= "#{member.posts.count}件" %></td>
+      <td><%= "#{member.posts.published.count}件" %></td>
       <td><%= "#{member.followings.count}人" %></td>
       <td><%= "#{member.followers.count}人" %></td>
     <% end %>
