--- a/app/views/user/members/show.html.erb
+++ b/app/views/user/members/show.html.erb
@@ -12,12 +12,13 @@
             <% else %>
               <h2><%= image_tag @member.get_profile_image(100,100),class: 'image mr-5 ' %><%= @member.nickname %>さんのページ</h2>
             <% end %>
-            <div class='level'>Lv.<%= @member.level %></div>
-            <div>次のレベルまで<%= @member.level*50 - @member.exp_sum %></div>
-          </div>
-
-          <div class="progress">
-            <div class="progress-bar" role="progressbar" style=<%= "width:" + number_to_percentage(@exp_sum_percent.to_s); %> aria-valuenow=<%= number_to_percentage(@exp_sum_percent.to_s) %> aria-valuemin="0" aria-valuemax="100"><%= number_to_percentage(@exp_sum_percent).to_f.ceil(2) %>%</div>
+            <% if current_member.guest? %>
+              <div class='level'>Lv.<%= @member.level %></div>
+              <div class='text-right'>次のレベルまで<%= @member.level*50 - @member.exp_sum %>exp</div>
+              <div class="progress mb-5">
+                <div class="progress-bar" role="progressbar" style=<%= "width:" + number_to_percentage(@exp_sum_percent.to_s); %> aria-valuenow=<%= number_to_percentage(@exp_sum_percent.to_s) %> aria-valuemin="0" aria-valuemax="100"><%= number_to_percentage(@exp_sum_percent).to_f.ceil(2) %>%</div>
+              </div>
+            <% end %>
           </div>
 
           <tr>
@@ -99,6 +100,7 @@
           </tbody>
         </table>
       <% end %>
+      <div><%= paginate @posts %></div>
     </div>
   </div>
 </div>
