--- a/app/views/user/post_comments/_comments.html.erb
+++ b/app/views/user/post_comments/_comments.html.erb
@@ -1,4 +1,4 @@
-<h5>コメント一覧(<%= @post.post_comments.count %>件)</h5>
+<h5>コメント一覧(<%= post.post_comments.count %>件)</h5>
 <table class='table'>
   <tbody>
     <% post.post_comments.each do |post_comment| %>
