--- a/app/views/user/searches/search.html.erb
+++ b/app/views/user/searches/search.html.erb
@@ -4,10 +4,17 @@
       <table class='table main-top'>
         <thead>
           <tr>
-            <th class='col-3'>ニックネーム</th>
-            <th class='col-4'>タイトル</th>
-            <th class='col-3'>投稿内容</th>
-            <th class='col-2'>いいね数</th>
+            <% if @model == 'member' %>
+              <th class='col-3'>ニックネーム(フルネーム)</th>
+              <th class='col-4'>投稿数</th>
+              <th class='col-3'>フォロー数</th>
+              <th class='col-2'>フォロワー数</th>
+            <% elsif @model == 'post' %>
+              <th class='col-3'>ニックネーム(フルネーム)</th>
+              <th class='col-4'>タイトル</th>
+              <th class='col-3'>投稿内容</th>
+              <th class='col-2'>いいね数</th>
+            <% end %>
           </tr>
         </thead>
         <tbody>
