--- a/app/views/admin/members/edit.html.erb
+++ b/app/views/admin/members/edit.html.erb
@@ -49,7 +49,7 @@
             </tr>
             <tr>
               <th></th>
-              <td class='text-right'><%= f.submit '編集する', class: 'btn btn-success' %></td>
+              <td class='text-right'><%= f.submit '編集を終える', class: 'btn btn-success' %></td>
             </tr>
           </tbody>
         </table>
