--- a/app/views/admin/members/show.html.erb
+++ b/app/views/admin/members/show.html.erb
@@ -8,9 +8,15 @@
             <th>プロフィール画像</th>
             <td><%= image_tag @member.get_profile_image(100,100),class: 'image' %></td>
           </tr>
+
           <tr>
             <th class='col-4'>お名前</th>
             <td class='col-8'><%= @member.full_name %></td>
+          </tr>
+
+          <tr>
+            <th>レベル</th>
+            <td>Lv.<%= @member.level %></td>
           </tr>
 
           <tr>
@@ -26,6 +32,11 @@
           <tr>
             <th>メールアドレス</th>
             <td><%= @member.email %></td>
+          </tr>
+
+          <tr>
+            <th>登録日</th>
+            <td><%= l @member.created_at, format: :short %></td>
           </tr>
 
           <tr>
@@ -57,6 +68,7 @@
           <% end %>
         </tbody>
       </table>
+      <%= paginate @posts %>
       <div class='text-right'>
         <%= link_to "#{@member.full_name}さんの編集ページへ", edit_admin_member_path(@member.id), class: 'btn btn-success' %>
       </div>
