--- a/app/views/admin/posts/index.html.erb
+++ b/app/views/admin/posts/index.html.erb
@@ -18,7 +18,7 @@
               <td><%= link_to post.member.full_name, admin_member_path(post.member_id) %></td>
               <td><%= link_to post.title, admin_post_path(post.id) %></td>
               <td><%= post.content.truncate(30) %></td>
-              <td><%= post.tags.pluck(:name).join(',') %></td>
+              <td><%= post.tags.pluck(:tag_name).join(',') %></td>
               <td><%= post.status_i18n %></td>
             </tr>
           <% end %>
