--- a/app/views/admin/tags/index.html.erb
+++ b/app/views/admin/tags/index.html.erb
@@ -12,7 +12,7 @@
         <tbody>
           <% @tags.each do |tag| %>
             <tr>
-              <td><%= tag.name %></td>
+              <td><%= tag.tag_name %></td>
               <td><%= link_to '削除する', admin_tag_path(tag.id), method: :delete,"data-confirm" => "本当に消しますか?", class: 'btn btn-danger' %></td>
             </tr>
           <% end %>
