--- a/app/views/user/posts/_index.html.erb
+++ b/app/views/user/posts/_index.html.erb
@@ -1,7 +1,12 @@
 <% posts.each do |post| %>
   <tr>
-    <td><%= link_to post.member.nickname, member_path(post.member_id) %></td>
-    <td><%= link_to post.title, post_path(post.id) %></td>
+    <% if member_signed_in? %>
+      <td><%= link_to post.member.nickname, member_path(post.member_id) %></td>
+      <td><%= link_to post.title, post_path(post.id) %></td>
+    <% elsif admin_signed_in? %>
+      <td><%= link_to post.member.nickname, admin_member_path(post.member_id) %></td>
+      <td><%= link_to post.title, admin_post_path(post.id) %></td>
+    <% end %>
     <td><%= post.content.truncate(15) %></td>
     <td id="like_buttons_<%= post.id %>">
       <%= render "user/likes/like", post: post %>
