--- a/app/views/user/posts/edit.html.erb
+++ b/app/views/user/posts/edit.html.erb
@@ -15,8 +15,8 @@
           <%= f.text_area :content,class: 'form-control',rows: "20" %>
         </div>
         <div class='form-group'>
-          <%= f.label :name, "タグ (,で区切ると複数タグ登録できます)" %>
-          <%= f.text_field :name,value: @tag_list,class:"form-control"%>
+          <%= f.label :tag_name, "タグ (,で区切ると複数タグ登録できます)" %>
+          <%= f.text_field :tag_name,value: @tag_list,class:"form-control"%>
         </div>
         <div class='form-group'>
           <% if @post_status %>
