--- a/app/views/user/posts/index.html.erb
+++ b/app/views/user/posts/index.html.erb
@@ -23,6 +23,7 @@
           <%= render 'user/posts/index', posts: @posts %>
         </tbody>
       </table>
+      <%= paginate @posts %>
     </div>
   </div>
 </div>
